[package]
name = "translatepmd"
version = "1.0.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"
description = "Command line tool to translate pmd using gettext po file"
repository = "https://github.com/marius851000/pmdtranslate"
keywords = [ "parser" ]
categories = [ "parser-implementations" ]
license = "CC0-1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ] }
anyhow = "1.0.0"
pmd_message = "2.0.0"
pmd_farc = "1.0.1"
thiserror = "1.0.23"
pmd_code_table = "0.1.0"